Update ThreadLocalInheritanceProblem.java